--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -3,5 +3,6 @@
 {% block content %}
     <h1>Home</h1>
     <p>Page visits: {{page_visit_count}}</p>
+    <p>Percent:{{percent}} </p>
     <p>Total visits: {{total_visit_count}}</p>
 {% endblock %}
