--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saas</title>
+    {% include 'base/css.html' %}
 </head>
 <body>
-    <h1>Hello WOrld</h1>
-
+    {% include 'nav/navbar.html' %}
     {% block content %}
-
     {% endblock %}
+    {% include 'base/js.html' %}
 </body>
 </html>
