--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     {% include 'nav/navbar.html' %}
+    {% include 'base/messages.html' with messages=messages %}
     {% block content %}
     {% endblock %}
     {% include 'base/js.html' %}
+    
 </body>
 </html>
