--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     <h1 >Home</h1>
+    {% include 'snippets/welcome-user-msg.html' %}
     <p>Page visits: {{page_visit_count}}</p>
     <p>Percent:{{percent}} </p>
     <p>Total visits: {{total_visit_count}}</p>
