--- a/src/templates/subscriptions/user_detail_view.html
+++ b/src/templates/subscriptions/user_detail_view.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'dashboard/base.html' %}
 
 {% block content %}
 <h1 class="text-lg font-medium" >Your Subscription</h1>
