--- a/src/templates/subscriptions/pricing.html
+++ b/src/templates/subscriptions/pricing.html
@@ -21,7 +21,7 @@
         <div class="space-y-8 md:space-y-0 lg:grid lg:grid-cols-3 sm:gap-6 xl:gap-10 lg:space-y-0">
             <!-- Pricing Card -->
             {% for price_obj in object_list %}
-                {% include 'subscriptions\snippet\pricing-card.html' with object=price_obj %}
+                {% include 'subscriptions/snippet/pricing-card.html' with object=price_obj %}
             {% endfor %}
         </div>
     </div>
