"added few changes for deployment"

--- a/src/templates/landing/main.html
+++ b/src/templates/landing/main.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 {% include 'landing/hero.html' %}
+{% include 'landing/CTA.html' %}
 {% include 'landing/features.html' %}
 {% include 'landing/proofs.html' %}
     
