--- a/src/templates/subscriptions/user_detail_view.html
+++ b/src/templates/subscriptions/user_detail_view.html
@@ -1,4 +1,5 @@
 {% extends 'dashboard/base.html' %}
+{% load static %}
 
 {% block content %}
 <h1 class="text-lg font-medium" >Your Subscription</h1>
@@ -13,5 +14,6 @@
 <p>Member since: {{ subscription.current_period_start|timesince }}</p>
 <p>Start date: {{ subscription.current_period_start }}</p>
 <p>End date: {{ subscription.current_period_end|timeuntil }} ({{ subscription.current_period_end }})</p>
+
 
 {% endblock %}
