--- a/src/templates/subscriptions/snippet/pricing-card.html
+++ b/src/templates/subscriptions/snippet/pricing-card.html
@@ -39,6 +39,5 @@
             <span>Free updates: <span class="font-semibold">6 months</span></span>
         </li> -->
     </ul>
-    <!-- <a href="{{ object.get_checkout_url }}" class="text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:ring-blue-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:text-white  dark:focus:ring-blue-900">Get started</a> -->
-    <a href="{% url 'checkout_error_page' %}" class="text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:ring-blue-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:text-white  dark:focus:ring-blue-900">Get started</a>
+    <a href="{{ object.get_checkout_url }}" class="text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:ring-blue-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:text-white  dark:focus:ring-blue-900">Get started</a>
 </div>
